# waGrandPrix

./: .atk-compose.yml  .atk.yml  .avtoolbox.yml  .gitignore  .gitmodules  README.md  atk.yml  docker-compose.yml  docker-requirements.txt
_templates/ros2/python-node/: index.js
containers/agx/scripts/: .51-zedsdk.sh  51-canlib.sh  51-zedsdk.sh  zed-sdk.sh
containers/dev/: dev.dockerfile
docker/: dev.dockerfile  prod.dockerfile  ros2_tutorial.dockerfile
docker/dev/: dev.dockerfile
docker/wasim/: wasim.dockerfile
docs/: docker-development.md  initial-setup.md
docs/ros2/: adding-a-node.md  creating-a-package.md  ros2-workspace.md
misc/_templates/ros2/python-node/: python-node.ejs.t
misc/ros2_tutorial/: README.md
misc/scripts/: licenseheaders.py
sim/wasim/: baseline_track.py
wasim/: baseline_track.py
workspace/: control_log.txt  launch.sh
workspace/src/01_perception/perception_meta/: package.xml  setup.cfg  setup.py
workspace/src/01_perception/perception_py/: package.xml  setup.cfg  setup.py
workspace/src/02_localization/localization_meta/: package.xml  setup.cfg  setup.py
workspace/src/02_localization/localization_py/: package.xml  setup.cfg  setup.py
workspace/src/02_state_estimation/state_estimation_meta/: package.xml  setup.cfg  setup.py
workspace/src/05_kill_switch/: kill_switch.py  package.xml  setup.cfg  setup.py
workspace/src/common/launch/wagp_launch/: CMakeLists.txt  package.xml
workspace/src/common/launch/wagp_launch/launch/: main.launch.py  sim_main.launch.py  wagp_bag_record.launch.py
(+186 files in other folders)
